// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/layouts/Main render 1`] = `
<DocumentFragment>
  <div />
  <div />
  <div
    class="css-1gplqbk"
  >
    <div />
  </div>
</DocumentFragment>
`;

exports[`src/layouts/Main render without token 1`] = `
<DocumentFragment>
  <div />
  <div />
  <div
    class="css-s5tqqr"
  >
    <div />
  </div>
</DocumentFragment>
`;
